--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="onLoad();">
 <div class="page">
     <header>
-        <h1>U.S. ELECTION MAP</h1>
+        <h1>ELECTION MAP</h1>
     </header>
 
     <div class="map-container">
